--- a/KMIskaiciuokle.html
+++ b/KMIskaiciuokle.html
@@ -5,35 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
     <script src="skaiciuokle.js" defer></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="row ">
-            <h1 style="color: rgb(22, 91, 112); margin-top: 20px;">
-                KMI skaičiuoklė
-            </h1>
+        <div class="title">
+            <h1>KMI skaičiuoklė</h1>
+        </div>
+        <div class="row">
             <div class="col-md-6 mt-5">
                 <div class="card">
                     <div class="card-header">
-                        Į LENTELĘ ĮVESKITE DUOMENIS
+                        Į lentelę įveskite duomenis:
                     </div>
                     <div class="card-body">
-
                         <div class="mb-3">
                             <label class="form-label">Jūsų ūgis (centimetrais, pvz.: 168)*:</label>
-                            <input type="number" value="" class="form-control " placeholder="Enter" id="height">
+                            <input type="number" placeholder="Enter" id="height">
                         </div>
 
                         <div class="mb-3">
                             <label class="form-label">Jūsų svoris (kilogramais, pvz.: 50)*:</label>
-                            <input type="number" value="" class="form-control" placeholder="Enter" id="weight">
+                            <input type="number" placeholder="Enter" id="weight">
                         </div>
-
-
-                        <button class="btn btn-outline-primary" id="btn">Skaičiuoti</button>
+                        <button class="btn" id="btn">Skaičiuoti</button>
                     </div>
                 </div>
             </div>
@@ -42,9 +39,7 @@
                     <div class="card-header">
                         Jūsų kūno masės indeksas yra:
                     </div>
-                    <div class="card-body" id="kmi">
-                        Rezultatas:
-
+                    <div class="bottom" id="kmi">
 
                     </div>
                 </div>
