--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>KMI skaičiuoklė</h1>
         </div>
         <div class="row">
-            <div class="col-md-6 mt-5">
+            <div>
                 <div class="card">
                     <div class="card-header">
                         Į lentelę įveskite duomenis:
@@ -34,13 +34,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 mt-5">
+            <div>
                 <div class="card">
                     <div class="card-header">
                         Jūsų kūno masės indeksas yra:
                     </div>
                     <div class="bottom" id="kmi">
-
                     </div>
                 </div>
             </div>
